--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,5 +10,10 @@
         android:id="@+id/txtHolaMundo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:text="Hola mundo!" />
+    <TextView
+        android:id="@+id/txtHolaMundoDos"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Hola mundo!" />
 </LinearLayout>
